[gd_scene load_steps=27 format=3 uid="uid://bqia72xm43j0g"]

[ext_resource type="Script" path="res://Scripts/weapons_script/emerald_staff.gd" id="1_6p0h8"]
[ext_resource type="PackedScene" uid="uid://0mppnwm0xduq" path="res://Scenes/Body_parts/Arms/attacks/emerald_staff_attack.tscn" id="2_cbh1a"]
[ext_resource type="Script" path="res://Resources/Scripts/Body_part_upgrade.gd" id="2_eoavr"]
[ext_resource type="Texture2D" uid="uid://d1x5rpd3f0wb3" path="res://Sprites/Body_parts_anims/weapons/magic_weapons/emerald_staff.png" id="2_he6i1"]
[ext_resource type="Texture2D" uid="uid://57hukcpmwi1s" path="res://Sprites/Body_parts_anims/hands/l_hand.png" id="3_ldigu"]
[ext_resource type="Texture2D" uid="uid://sncaj18ckwp8" path="res://Sprites/Body_parts_anims/Arms/arms_attacks/regular_mage_detail.png" id="4_7fy01"]

[sub_resource type="Resource" id="Resource_fh4jw"]
script = ExtResource("2_eoavr")
skill_speed = 200
skill_cooldown = 1.0
skill_dmg = 2.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 1
hp_modifier = 10
defense_modifier = 2
skill_crit_chance = 0.3
speed_modifier = 0

[sub_resource type="Resource" id="Resource_rgcl6"]
script = ExtResource("2_eoavr")
skill_speed = 0
skill_cooldown = 0.0
skill_dmg = 0.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 0
hp_modifier = 0
defense_modifier = 0
skill_crit_chance = 0.0
speed_modifier = 0

[sub_resource type="Resource" id="Resource_2ql4v"]
script = ExtResource("2_eoavr")
skill_speed = 0
skill_cooldown = 0.0
skill_dmg = 0.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 0
hp_modifier = 0
defense_modifier = 0
skill_crit_chance = 0.0
speed_modifier = 0

[sub_resource type="Resource" id="Resource_xdukd"]
script = ExtResource("2_eoavr")
skill_speed = 0
skill_cooldown = 0.0
skill_dmg = 0.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 0
hp_modifier = 0
defense_modifier = 0
skill_crit_chance = 0.0
speed_modifier = 0

[sub_resource type="Resource" id="Resource_dt77v"]
script = ExtResource("2_eoavr")
skill_speed = 0
skill_cooldown = 0.0
skill_dmg = 0.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 0
hp_modifier = 0
defense_modifier = 0
skill_crit_chance = 0.0
speed_modifier = 0

[sub_resource type="Resource" id="Resource_8efyf"]
script = ExtResource("2_eoavr")
skill_speed = 0
skill_cooldown = 0.0
skill_dmg = 0.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 0
hp_modifier = 0
defense_modifier = 0
skill_crit_chance = 0.0
speed_modifier = 0

[sub_resource type="Resource" id="Resource_givly"]
script = ExtResource("2_eoavr")
skill_speed = 0
skill_cooldown = 0.0
skill_dmg = 0.0
skill_hp = 0
skill_knockback = 0.0
skill_level = 0
hp_modifier = 0
defense_modifier = 0
skill_crit_chance = 0.0
speed_modifier = 0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_j5y2l"]
light_mode = 1

[sub_resource type="Gradient" id="Gradient_auhkd"]
colors = PackedColorArray(0, 0.87451, 0, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sngi7"]
gradient = SubResource("Gradient_auhkd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xtk2b"]
emission_shape = 1
emission_sphere_radius = 20.7
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
orbit_velocity_min = -0.3
orbit_velocity_max = 0.3
angle_max = 147.7
color_ramp = SubResource("GradientTexture1D_sngi7")

[sub_resource type="Animation" id="Animation_1inw4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5vbha"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.5),
"transitions": PackedFloat32Array(-0.5, -0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 10), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4vm56"]
resource_name = "run"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(-0.5, -0.5, -0.5, -0.5, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(5, -5), Vector2(0, 0), Vector2(-5, -5), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vje3n"]
_data = {
"RESET": SubResource("Animation_1inw4"),
"idle": SubResource("Animation_5vbha"),
"run": SubResource("Animation_4vm56")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_omqq2"]
radius = 1000.0

[sub_resource type="CircleShape2D" id="CircleShape2D_i310x"]
radius = 360.035

[sub_resource type="Animation" id="Animation_bjyq4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_sprite/glow_detail:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon_sprite/GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("weapon_sprite/glow_detail:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l437g"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1),
"transitions": PackedFloat32Array(0.5, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -38), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_sprite/glow_detail:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon_sprite/GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("weapon_sprite/glow_detail:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(2, 2, 2, 1), Color(2, 2, 2, 1), Color(2, 2, 2, 0)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_attack"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6ul2a"]
_data = {
"RESET": SubResource("Animation_bjyq4"),
"attack": SubResource("Animation_l437g")
}

[node name="emerald_staff" type="Node2D"]
script = ExtResource("1_6p0h8")
level_upgrader = Array[ExtResource("2_eoavr")]([SubResource("Resource_fh4jw"), SubResource("Resource_rgcl6"), SubResource("Resource_2ql4v"), SubResource("Resource_xdukd"), SubResource("Resource_dt77v"), SubResource("Resource_8efyf"), SubResource("Resource_givly")])
core_scaling_type = "mage_core"
attack_scene = ExtResource("2_cbh1a")

[node name="weapon_sprite" type="Sprite2D" parent="."]
z_index = -3
rotation = -0.436332
scale = Vector2(3, 3)
texture = ExtResource("2_he6i1")

[node name="hand_sprite" type="Sprite2D" parent="weapon_sprite"]
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_ldigu")

[node name="glow_detail" type="Sprite2D" parent="weapon_sprite"]
visible = false
position = Vector2(5.502, -16.482)
texture = ExtResource("4_7fy01")

[node name="GPUParticles2D" type="GPUParticles2D" parent="weapon_sprite"]
material = SubResource("CanvasItemMaterial_j5y2l")
position = Vector2(5.33333, -16.3333)
rotation = 0.459022
emitting = false
amount = 30
process_material = SubResource("ParticleProcessMaterial_xtk2b")
local_coords = true

[node name="skill_spwn_loc" type="Marker2D" parent="weapon_sprite"]
unique_name_in_owner = true
position = Vector2(5.33333, -16.3333)
scale = Vector2(0.333333, 0.333333)

[node name="walk_anim" type="AnimationPlayer" parent="weapon_sprite"]
libraries = {
"": SubResource("AnimationLibrary_vje3n")
}

[node name="atk_cooldown_timer" type="Timer" parent="."]

[node name="Detection_area" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection_area"]
shape = SubResource("CircleShape2D_omqq2")

[node name="range_area" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="range_area"]
shape = SubResource("CircleShape2D_i310x")
debug_color = Color(0.984314, 0, 0.352941, 0.419608)

[node name="attack_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6ul2a")
}

[connection signal="timeout" from="atk_cooldown_timer" to="." method="_on_atk_cooldown_timer_timeout"]
[connection signal="body_entered" from="Detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="Detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="range_area" to="." method="_on_range_area_body_entered"]
